--- a/frontend/src/components/DatasetListView.css
+++ b/frontend/src/components/DatasetListView.css
@@ -1,6 +1,21 @@
-.ResultList {
-    text-align: center;
-    align-items: center;
-    margin: auto;
-    margin-top: 20px;
-  }
+.ListViewContainerDetail{
+  width: 100%;
+  height: 100%;
+  grid-row: 2;
+  grid-column: 2 / span 3;
+  justify-self: start;
+}
+.datagrid {
+  display: flex;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #259a6d;
+}
+
+.headerStyles {
+  background: gray;
+  font-weight: bold;
+  font-size: 8px;
+};
