--- a/frontend/src/components/SearchView.css
+++ b/frontend/src/components/SearchView.css
@@ -1,8 +1,10 @@
+/* Part 0: searchview/manageview 선택 버튼 */
 .App {
+  width: 100%;
+  height: 100%;
   text-align: center;
   align-items: center;
 }
-
 .App-header {
   text-align: center;
   align-items: center;
@@ -17,33 +19,151 @@
   margin-bottom: 20px;
 }
 
-.Uploader {
-  width: 950px;
-  margin: auto;
+/* 공통 양식 */
+.ContainerTitle {
+  grid-row: 1;
+  grid-column: 2 / span 2;
+  justify-self: start;
+  font-weight: bold;
+  align-self: center;
+}
+.ContainerDetail {
+  width: 100%;
+  height: 100%;
+  grid-row: 2;
+  grid-column: 2 / span 3;
+  justify-self: start;
+}
+
+/* Par1: 업로드 */
+.UploadContainer {
+  width: 100%;
+  height: 100%;
+  grid-row: 1;
   display: grid;
-  grid-template-columns: 49% 40% 13%;
+  grid-template-rows: 40% 60%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.Uploaderbar {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 23% 70% 7%;
   /* gap : 1%; */
 }
 
-.Searcher {
-  width: 950px;
-  height: 30px;
+/* Par2: 필터 */
+.SearchContainer {
+  width: 100%;
+  height: 100%;
+  grid-row: 2;
   display: grid;
-  grid-template-columns: 25% 8% 14% 9% 7% 9% 12% 9%;
-  gap:1%;
-  margin: auto;
-}
-
-.ResultList {
-  text-align: center;
+  grid-template-rows: 12% 88%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   align-items: center;
-  margin: auto;
-  margin-top: 20px;
+}
+.SearchContainerDetail{
+  width: 100%;
+  height: 100%;
+  grid-row: 2;
+  grid-column: 2 / span 3;
+  justify-self: start;
+  display: grid;
+  grid-template-rows: 10% 40% 40% 10%;
+  grid-template-columns: 15% 15% 70%;
+  align-items: center;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+}
+.HighLevelGroup {
+  width: 100%;
+  height: 100%;
+  grid-column: 1;
+  display: grid;
+  justify-self: start;
+  align-self: center;
+  align-items: center;
+  text-align: left;
+  font-weight: bold;
+  color: white;
+  background-color: rgb(38, 73, 132);
+}
+.LowLevelGroup {
+  width: 100%;
+  height: 100%;
+  grid-column: 2;
+  display: grid;
+  justify-self: start;
+  align-self: center;
+  align-items: center;
+  text-align: left;
+  font-weight: bold;
+  color: blue;
+}
+.filters {
+  grid-column: 3;
+  grid-row: 1;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  justify-self: start;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+}
+.filters_qc {
+  grid-column: 3;
+  grid-row: 2;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 25% 25% 25% 25%;
+  grid-template-columns: 6% 7% 7% 7% 9% 7% 7% 7% 8% 70  ;
+  justify-self: start;
+  justify-items: start;
+  align-self: center;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+}
+.filters_sensor {
+  grid-column: 3;
+  grid-row: 3;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 4% 27% 5% 27% 4% 27%;
+  border-bottom: 1px solid lightgray;
+  justify-self: start;
+  justify-items: start;
+  align-items: center;
+  align-self: center;
+}
+.searchbar {
+  padding: 0px;
+  font-size: 8px;
+  width: 30%;
+  height: 100%;
+  align-items: center;
+}
+.searchbar input[type="text"] {
+  width: 100%;
+}
+.Searcher {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 30% 60%;
 }
 
-.leftAlignedText {
-  margin-top: 5px;
-  text-align: left;
-  align-items: baseline;
-  font-size: 14px;
+/* Par3: 리스트뷰 */
+.ListviewContainer {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-row: 3;
+  grid-template-rows: 8% 90%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+
