--- a/frontend/src/components/SearchView.css
+++ b/frontend/src/components/SearchView.css
@@ -56,7 +56,7 @@
 .SearchContainer {
   width: 100%;
   height: 100%;
-  grid-row: 2;
+  grid-row: 3;
   display: grid;
   grid-template-rows: 12% 88%;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -99,7 +99,7 @@
   align-items: center;
   text-align: left;
   font-weight: bold;
-  color: blue;
+  color: rgb(38, 73, 132);
 }
 .filters {
   grid-column: 3;
@@ -118,7 +118,7 @@
   height: 100%;
   display: grid;
   grid-template-rows: 25% 25% 25% 25%;
-  grid-template-columns: 6% 7% 7% 7% 9% 7% 7% 7% 8% 70  ;
+  grid-template-columns: 6% 7% 8% 7% 11% 7% 7% 7% 10% 7%  ;
   justify-self: start;
   justify-items: start;
   align-self: center;
@@ -162,7 +162,7 @@
   display: grid;
   width: 100%;
   height: 100%;
-  grid-row: 3;
+  grid-row: 5;
   grid-template-rows: 8% 90%;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
