--- a/frontend/src/components/SearchView.css
+++ b/frontend/src/components/SearchView.css
@@ -22,7 +22,6 @@
 /* 공통 양식 */
 .ContainerTitle {
   grid-row: 1;
-  grid-column: 2 / span 2;
   justify-self: start;
   font-weight: bold;
   align-self: center;
@@ -31,42 +30,40 @@
   width: 100%;
   height: 100%;
   grid-row: 2;
-  grid-column: 2 / span 3;
   justify-self: start;
 }
 
 /* Par1: 업로드 */
 .UploadContainer {
-  width: 100%;
-  height: 100%;
   grid-row: 1;
+  grid-column: 2;
   display: grid;
+  align-items: center;
   grid-template-rows: 40% 60%;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 .Uploaderbar {
+  margin-top: 7px;
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 23% 70% 7%;
+  grid-template-columns: 30% 63% 7%;
   /* gap : 1%; */
 }
 
 /* Par2: 필터 */
 .SearchContainer {
-  width: 100%;
-  height: 100%;
-  grid-row: 3;
   display: grid;
+  grid-row: 3;
+  grid-column: 2;
   grid-template-rows: 12% 88%;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  height: 100%;
   align-items: center;
 }
 .SearchContainerDetail{
+  margin-top: 7px;
   width: 100%;
   height: 100%;
   grid-row: 2;
-  grid-column: 2 / span 3;
   justify-self: start;
   display: grid;
   grid-template-rows: 10% 40% 40% 10%;
@@ -160,10 +157,9 @@
 /* Par3: 리스트뷰 */
 .ListviewContainer {
   display: grid;
-  width: 100%;
-  height: 100%;
   grid-row: 5;
+  grid-column: 2;
+  height: 100%;
   grid-template-rows: 8% 92%;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
