--- a/frontend/src/components/DatasetListView.css
+++ b/frontend/src/components/DatasetListView.css
@@ -1,9 +1,8 @@
 .ListViewContainerDetail{
-  width: 100%;
-  height: 100%;
   grid-row: 2;
-  grid-column: 2 / span 3;
   justify-self: start;
+  width: 100%;
+  margin-top: 7px;
 }
 .datagrid {
   display: flex;
@@ -12,8 +11,15 @@
   width: 100%;
   height: 100%;
   border: 1px solid #259a6d;
+  align-items: center;
+  justify-content: center;
 }
-
+.MuiTablePagination-selectLabel {
+  margin-top: 13px;
+}
+.MuiTablePagination-displayedRows {
+  margin-top: 15px;
+}
 .headerStyles {
   background: gray;
   font-weight: bold;
