[Update] \ Manage Page의 레이아웃 변경(ManageView.css) \ Manage Page에서 로그인 기능 동작하도록 함. 현재는 로그인 창만 있는 상태(ManageView.js)

--- a/frontend/src/components/ManageView.css
+++ b/frontend/src/components/ManageView.css
@@ -1,9 +1,10 @@
 .ids {
-    width: 800px;
-    text-align: center;
-    align-items: center;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 80% 10%;
-    gap : 1%;
-  }
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  display: grid;
+  width: 70%;
+  grid-template-columns: 61% 39%;
+  gap : 1%;
+}
