--- a/frontend/src/components/UserpageView.css
+++ b/frontend/src/components/UserpageView.css
@@ -1,9 +1,9 @@
 .user-info {
-    width: 75%;
-    text-align: left;
-    align-items: center;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 20% 10%;
-    gap : 70%;
-  }
+  width: 66%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  display: flex;
+  gap : 70%;
+}
